--- a/blog.html
+++ b/blog.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
+    <title>Blog - LLAVQ</title>
 </head>
 <body>
-    <h1>List of Texts</h1>
-    <ul id="textList"></ul>
+  <header class="sticky-header">
+    <h1><a href="index.html" class="logo">LLAVQ</a></h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">INTRO</a></li>
+        <li><a href="blog.html">BLOG</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <script src="script.js"></script>
+  <div class="card">
+      <h1>List of Texts</h1>
+      <ul id="textList"></u
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
