--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <title>ROUTER</title>
 </head>
 <body>
-  <div class="navigator-container">
-    <h1>LLAVQ</h1>
-    <li>
-      <ul>
-        <a href="index.html">INTRO</a>
+  <header class="sticky-header">
+    <h1><a href="index.html" class="logo">LLAVQ</a></h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">INTRO</a></li>
+        <li><a href="blog.html">BLOG</a></li>
       </ul>
-      <ul>
-        <a href="blog.html">LLAVQ BLOG</a>
-      </ul>
-    </li>
+    </nav>
+  </header>
+
+  <div class="card">
+    <h2>Welcome to LLAVQ</h2>
+    <p>This is an introductory card. You can add more content here.</p>
+    <p>Feel free to explore the blog for more interesting articles!</p>
   </div>
+
 </body>
 </html>
