--- a/blog.html
+++ b/blog.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
-    <title>Blog - LLAVQ</title>
+    <title>Blog</title>
 </head>
 <body>
-  <header class="sticky-header">
-    <h1><a href="index.html" class="logo">LLAVQ</a></h1>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html">INTRO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="sticky-header">
+        <h1><a href="index.html" class="logo">LLAVQ</a></h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">INTRO</a></li>
+                <li><a href="blog.html">BLOG</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="card">
-      <h1>List of Texts</h1>
-      <ul id="textList"></u
-  </div>
+    <div class="card" id="postsContainer">
+        <h2>Texts</h2> <!-- Changed heading -->
+    </div>
 
-  <script src="script.js"></script>
+    <!-- Modal for displaying full content -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span> <!-- Close button -->
+            <h3 id="modalTitle"></h3> <!-- Title for modal -->
+            <p id="modalContent"></p> <!-- Content for modal -->
+        </div>
+    </div>
+
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
