--- a/blog.html
+++ b/blog.html
@@ -17,16 +17,17 @@
         </nav>
     </header>
 
-    <div class="card" id="postsContainer">
-        <h2>Texts</h2> <!-- Changed heading -->
-    </div>
+    <!-- Blog Posts Section -->
+    <section id="postsContainer">
+        <!-- Posts will be populated here by script.js -->
+    </section>
 
     <!-- Modal for displaying full content -->
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span> <!-- Close button -->
             <h3 id="modalTitle"></h3> <!-- Title for modal -->
-            <p id="modalContent"></p> <!-- Content for modal -->
+            <div id="modalContent"></div> <!-- Content for modal -->
         </div>
     </div>
 
