--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
-    <title>ROUTER</title>
+    <title>Welcome</title>
 </head>
 <body>
-  <header class="sticky-header">
-    <h1><a href="index.html" class="logo">LLAVQ</a></h1>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html">INTRO</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="sticky-header">
+        <h1><a href="index.html" class="logo">LLAVQ</a></h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">INTRO</a></li>
+                <li><a href="blog.html">BLOG</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="card">
-    <h2>Welcome to LLAVQ</h2>
-    <p>This is an introductory card. You can add more content here.</p>
-    <p>Feel free to explore the blog for more interesting articles!</p>
-  </div>
+    <!-- Welcome Section -->
+    <section class="welcome">
+        <h2>Welcome to LLAVQ</h2>
+    </section>
 
 </body>
 </html>
