--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
                 <li><a href="blog.html">BLOG</a></li>
             </ul>
         </nav>
+        <!-- Theme Toggle Switch -->
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+            </label>
+        </div>
     </header>
 
     <!-- Welcome Section -->
@@ -22,5 +29,6 @@
         <h2>Welcome to LLAVQ</h2>
     </section>
 
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
