--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,12 @@
                 <li><a href="blog.html">BLOG</a></li>
             </ul>
         </nav>
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+            </label>
+        </div>
     </header>
 
     <!-- Blog Posts Section -->
