--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">INTRO</a></li>
                 <li><a href="blog.html">BLOG</a></li>
+                <li><a href="LLAVA.html">LLAVA</a></li> <!-- Added LLAVA link -->
             </ul>
         </nav>
         <div class="theme-switch-wrapper">
