--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
-    <title>Welcome</title>
+    <title>Home</title>
 </head>
 <body>
     <header class="sticky-header">
@@ -13,9 +13,9 @@
             <ul class="nav-links">
                 <li><a href="index.html">INTRO</a></li>
                 <li><a href="blog.html">BLOG</a></li>
+                <li><a href="LLAVA.html">LLAVA</a></li> <!-- Added LLAVA link -->
             </ul>
         </nav>
-        <!-- Theme Toggle Switch -->
         <div class="theme-switch-wrapper">
             <label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox" />
@@ -24,11 +24,11 @@
         </div>
     </header>
 
-    <!-- Welcome Section -->
-    <section class="welcome">
+    <main>
         <h2>Welcome to LLAVQ</h2>
-    </section>
+        <p>Your go-to resource for all things related to LLaVA and more!</p>
+    </main>
 
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
