Add message for Veronika in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Welcome to LLAVQ</h2>
         <p>Your go-to resource for all things related to LLaVA and more!</p>
     </main>
-
+    <p>PLEASE VERONIKA, WRITE HERE: <a href="t.me/you_lovvaav">GRISHA</a></p>
     <script src="script.js"></script>
 </body>
 </html>
