--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <button id="tapButton" class="glow-button">Tap Me</button>
         </div>
         <div id="message" class="message">
-            ДАРОВА ТЫ ЧЕ КАК ТАМ ТЫКАЙ <a href="https://t.me/v_analchik" target="_blank">t.me/v_analchik</a>
+            ДАРОВА ТЫ ЧЕ КАК ТАМ  <a href="https://t.me/v_analchik" target="_blank">ТЫКАЙ</a>
         </div>
     </main>
     <script>
