Add additional message section in index.html

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         <div id="message" class="message">
             ДАРОВА ТЫ ЧЕ КАК ТАМ  <a href="https://t.me/v_analchik" target="_blank">ТЫКАЙ</a>
         </div>
+        <div id="message" class="message">
+            Я ЗНАЮ ТЫ ДАВНО ХОТЕЛ  <a href="https://t.me/v_analchik" target="_blank">В АНАЛЬЧИК</a>
+        </div>
     </main>
     <script>
         let clickCount = 0; // Initialize click counter
