--- a/index.html
+++ b/index.html
@@ -6,40 +6,21 @@
     <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
     <title>Home</title>
     <style>
-        /* Styles for the glowing button */
-        .button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Centers vertically in the viewport */
-        }
-        
-        .glow-button {
-            background-color: #6200ea;
-            color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 10px;
-            font-size: 20px;
-            cursor: pointer;
-            box-shadow: 0 0 20px #6200ea;
-            transition: all 0.3s ease;
-        }
-
-        .glow-button:hover {
-            box-shadow: 0 0 40px #6200ea;
-        }
-
-        .hidden {
-            opacity: 0;
-            transition: opacity 1s ease;
-        }
-
-        .message {
-            display: none;
+        .glow {
             text-align: center;
-            margin-top: 20px;
-            font-size: 22px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 20px;
+            margin: 50px auto;
+            max-width: 600px;
+            color: white;
+            font-size: 1.5em;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
+            animation: glow-animation 1.5s infinite alternate;
+        }
+        @keyframes glow-animation {
+            0% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
+            100% { box-shadow: 0 0 20px rgba(255, 255, 255, 1); }
         }
     </style>
 </head>
@@ -50,7 +31,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">INTRO</a></li>
                 <li><a href="blog.html">BLOG</a></li>
-                <li><a href="LLAVA.html">LLAVA</a></li> <!-- Added LLAVA link -->
+                <li><a href="LLAVA.html">LLAVA</a></li>
             </ul>
         </nav>
         <div class="theme-switch-wrapper">
@@ -64,29 +45,13 @@
     <main>
         <h2>Welcome to LLAVQ</h2>
         <p>Your go-to resource for all things related to LLaVA and more!</p>
-        <div class="button-container">
-            <button id="tapButton" class="glow-button">Tap Me</button>
-        </div>
-        <div id="message" class="message">
-            ДАРОВА ТЫ ЧЕ КАК ТАМ  <a href="https://t.me/v_analchik" target="_blank">ТЫКАЙ</a>
-        </div>
-        <div id="message" class="message">
-            Я ЗНАЮ ТЫ ДАВНО ХОТЕЛ  <a href="https://t.me/v_analchik" target="_blank">В АНАЛЬЧИК</a>
+
+        <div class="glow">
+            О ПРИВЕТ ТЫ ЧЕ КАК Э <a href="https://t.me/v_analchik">ТЫКАЙ</a><br>
+            Я ЗНАЮ ТЫ ДАВНО ХОТЕЛ <a href="https://t.me/v_analchik" target="_blank">В АНАЛЬЧИК</a>
         </div>
     </main>
-    <script>
-        let clickCount = 0; // Initialize click counter
-        const tapButton = document.getElementById('tapButton');
-        const message = document.getElementById('message');
-
-        tapButton.addEventListener('click', () => {
-            clickCount++; // Increment the click counter
-
-            if (clickCount === 3) {
-                tapButton.classList.add('hidden'); // Fade out the button
-                message.style.display = 'block'; // Show the message div
-            }
-        });
-    </script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
